# prek

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  clippy.toml  dist-workspace.toml  mise.toml  mkdocs.yml  prek.schema.json  pyproject.toml
.config/: nextest.toml
.github/: CODEOWNERS  copilot-instructions.md  renovate.json5  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/scripts/: hyperfine-run-benchmarks.sh  hyperfine-setup-test-env.sh  setup-dev-drive.ps1  setup-msvc.ps1
.github/workflows/: build-binaries.yml  build-dev-binaries.yml  build-docker.yml  build-release-binaries.yml  ci.yml  performance.yml  publish-crates.yml  publish-docs.yml  publish-homebrew.yml  publish-npm.yml  publish-prek-action.yml  publish-pypi.yml  publish-winget.yml  publish.yml  release.yml  sync-identify.yml  zizmor.yml
crates/prek/: Cargo.toml  build.rs
crates/prek-consts/: Cargo.toml
crates/prek-consts/src/: env_vars.rs  lib.rs
crates/prek-identify/: Cargo.toml  gen.py
crates/prek-identify/src/: lib.rs  tags.rs
crates/prek-pty/: Cargo.toml
crates/prek-pty/src/: lib.rs  pty.rs  sys.rs
crates/prek/src/: archive.rs  config.rs  fs.rs  git.rs  hook.rs  hook_entry.rs  http.rs  identify.rs  install_source.rs  main.rs  process.rs  resource_limit.rs  run.rs  schema.rs  settings.rs  store.rs  workspace.rs  yaml.rs
crates/prek/src/cli/: auto_update.rs  cache_clean.rs  cache_gc.rs  cache_size.rs  completion.rs  hook_impl.rs  identify.rs  install.rs  list.rs  list_builtins.rs  mod.rs  reporter.rs  sample_config.rs  self_update.rs  try_repo.rs  yaml_to_toml.rs
crates/prek/src/cli/auto_update/: config.rs  display.rs  mod.rs  repository.rs  source.rs
crates/prek/src/cli/run/: diff.rs  filter.rs  install.rs  keeper.rs  mod.rs  reporter.rs  run.rs  selector.rs
crates/prek/src/hooks/: meta_hooks.rs  mod.rs
crates/prek/src/hooks/builtin_hooks/: check_illegal_windows_names.rs  check_json5.rs  mod.rs
crates/prek/src/hooks/pre_commit_hooks/: check_added_large_files.rs  check_case_conflict.rs  check_executables_have_shebangs.rs  check_json.rs  check_merge_conflict.rs  check_shebang_scripts_are_executable.rs  check_symlinks.rs  check_toml.rs  check_vcs_permalinks.rs  check_xml.rs  check_yaml.rs  destroyed_symlinks.rs  detect_private_key.rs  file_contents_sorter.rs  fix_byte_order_marker.rs  fix_end_of_file.rs  fix_trailing_whitespace.rs  forbid_new_submodules.rs  mixed_line_ending.rs  mod.rs  no_commit_to_branch.rs  pretty_format_json.rs  shebangs.rs
crates/prek/src/languages/: conda.rs  coursier.rs  dart.rs  docker.rs  docker_image.rs  fail.rs  haskell.rs  julia.rs  lua.rs  mod.rs  perl.rs  r.rs  script.rs  swift.rs  system.rs  version.rs
crates/prek/src/languages/bun/: bun.rs  installer.rs  mod.rs  version.rs
crates/prek/src/languages/deno/: deno.rs  installer.rs  mod.rs  version.rs
crates/prek/src/languages/dotnet/: dotnet.rs  installer.rs  mod.rs  version.rs
crates/prek/src/languages/golang/: golang.rs  gomod.rs  installer.rs  version.rs
crates/prek/src/languages/node/: installer.rs  node.rs  version.rs
crates/prek/src/languages/pygrep/: pygrep.rs
crates/prek/src/languages/python/: mod.rs  pep723.rs  pyproject.rs  python.rs  uv.rs  version.rs
crates/prek/src/languages/ruby/: gem.rs  installer.rs  ruby.rs  version.rs
crates/prek/src/languages/rust/: installer.rs  rust.rs  rustup.rs  version.rs
crates/prek/src/snapshots/: prek__config__tests__language_version.snap  prek__config__tests__meta_hooks-5.snap  prek__config__tests__numeric_rev_is_parsed_as_string.snap  prek__config__tests__parse_hooks-3.snap  prek__config__tests__parse_repos-2.snap  prek__config__tests__parse_repos-3.snap  prek__config__tests__parse_repos-4.snap  prek__config__tests__parse_repos-6.snap  prek__config__tests__parse_repos.snap  prek__config__tests__read_config.snap  prek__config__tests__read_config_with_merge_keys.snap  prek__config__tests__read_config_with_nested_merge_keys.snap  prek__config__tests__read_manifest.snap  prek__config__tests__read_toml_config.snap  prek__config__tests__read_yaml_config.snap
crates/prek/tests/: auto_update.rs  builtin_hooks.rs  cache.rs  global_config.rs  hook_impl.rs  identify.rs  install.rs  list.rs  list_builtins.rs  meta_hooks.rs  run.rs  sample_config.rs  skipped_hooks.rs  try_repo.rs  validate.rs  workspace.rs  yaml_to_toml.rs
crates/prek/tests/common/: mod.rs
crates/prek/tests/fixtures/: uv-pre-commit-config.yaml
crates/prek/tests/languages/: bun.rs  conda.rs  coursier.rs  dart.rs  deno.rs  docker.rs  docker_image.rs  dotnet.rs  golang.rs  haskell.rs  julia.rs  main.rs  node.rs  perl.rs  python.rs  r.rs  ruby.rs  rust.rs  script.rs  shell.rs  swift.rs  system.rs  unimplemented.rs
docs/: authoring-hooks.md  benchmark.md  builtin.md  changelog.md  cli.md  compatibility.md  configuration.md  cookbook.md  debugging.md  diff.md  faq.md  index.md  installation.md  integrations.md  languages.md  quickstart.md  requirements.in  requirements.txt  todo.md  usage.md  workspace.md
docs/proposals/: concurrency.md  hook-groups.md  hook-shell.md
docs/reference/: cli.md  configuration.md  environment-variables.md
python/prek/: __main__.py  _find_prek.py
scripts/: build-npm-packages.py  generate-ci-matrix.py  generate_ci_matrix.py  hyperfine-run-benchmarks.sh  update-macports-portfile.py  update-schemastore-schema.sh
scripts/macports/: Portfile
skills/prek/: SKILL.md
