[project]
name = "prek"
version = "0.2.28"
description = "Better `pre-commit`, re-engineered in Rust"
authors = [{ name = "j178", email = "hi@j178.dev" }]
requires-python = ">=3.8"
keywords = ["pre-commit", "git", "hooks"]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance"
]

[project.urls]
Repository = "https://github.com/j178/prek"
Changelog = "https://github.com/j178/prek/blob/master/CHANGELOG.md"
Releases = "https://github.com/j178/prek/releases"
Homepage = "https://prek.j178.dev/"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/prek/Cargo.toml"
strip = true
include = [
    { path = "licenses/*", format = ["wheel", "sdist"] }
]

[tool.rooster]
version-format = "cargo"
version_tag_prefix = "v"
major_labels = []  # We do not use the major version number yet
minor_labels = ["breaking"]
changelog_ignore_labels = ["internal", "ci", "testing"]
changelog_sections.breaking = "Breaking changes"
changelog_sections.enhancement = "Enhancements"
changelog_sections.compatibility = "Enhancements"
changelog_sections.performance = "Performance"
changelog_sections.bug = "Bug fixes"
changelog_sections.documentation = "Documentation"
changelog_sections.__unknown__ = "Other changes"
changelog_contributors = true

version_files = [
    "pyproject.toml",
    # Replace the `workspace.package.version` field in the Cargo.toml
    { path = "Cargo.toml", format = "cargo", field = "workspace.package.version" },
    # Bump versions of dependent crates
    { target = "Cargo.toml", match = "^(prek-consts|prek-pty)", version_format = "cargo" },
    "README.md",
    "docs/installation.md",
    "docs/integrations.md",
]

[tool.uv]
managed = false
