[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "prek"
version = "0.3.12"
description = "A fast Git hook manager written in Rust, designed as a drop-in alternative to pre-commit, reimagined."
authors = [{ name = "j178", email = "hi@j178.dev" }]
requires-python = ">=3.8"
keywords = ["pre-commit", "git", "hooks"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "licenses/*"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/j178/prek"
Changelog = "https://github.com/j178/prek/blob/master/CHANGELOG.md"
Releases = "https://github.com/j178/prek/releases"
Homepage = "https://prek.j178.dev/"

[dependency-groups]
dev = ["rooster"]
docs = ["llmstxt-standalone>=0.2.0", "zensical>=0.0.24"]

[tool.uv.sources]
rooster = { git = "https://github.com/j178/rooster", rev = "747d16f" }

[tool.uv.dependency-groups]
dev = { requires-python = ">=3.12" }
docs = { requires-python = ">=3.12" }

[tool.maturin]
bindings = "bin"
manifest-path = "crates/prek/Cargo.toml"
strip = true
python-source = "python"

[tool.rooster]
version-format = "cargo"
version_tag_prefix = "v"
major_labels = [] # We do not use the major version number yet
minor_labels = ["breaking"]
changelog_ignore_labels = ["internal", "ci", "testing"]
changelog_sections.breaking = "Breaking changes"
changelog_sections.enhancement = "Enhancements"
changelog_sections.compatibility = "Enhancements"
changelog_sections.performance = "Performance"
changelog_sections.bug = "Bug fixes"
changelog_sections.documentation = "Documentation"
changelog_sections.__unknown__ = "Other changes"
changelog_contributors = true

version_files = [
  "pyproject.toml",
  # Replace the `workspace.package.version` field in the Cargo.toml
  { path = "Cargo.toml", format = "cargo", field = "workspace.package.version" },
  # Bump versions of dependent crates
  { target = "Cargo.toml", match = "^prek-", version_format = "cargo" },
  "README.md",
  "docs/installation.md",
  "docs/integrations.md",
]

[tool.uv]
package = false
