[package]
name = "prek-identify"
description = "File identification for prek"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
serde = ["dep:serde"]
schemars = ["dep:schemars"]

[dependencies]
anyhow = { workspace = true }
fs-err = { workspace = true }
phf = { workspace = true, default-features = false, features = ["macros"] }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
shlex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
