[package]
name = "prek-pty"
description = "pty utilities for prek"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
rustix = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
